# Audio-Player

./: .gitignore  CMakeLists.txt  README.md  main.cpp
custom/: fileHandling.h
fileHandling/: discoverSongs.cpp  discoverSongs.h  folderOpen.cpp  folderOpen.h  listSongs.cpp  listSongs.h
ui/: playAndPause.cpp  playAndPause.h  progressBar.cpp  progressBar.h
